setup static files access for layouts and pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-    <h1>STUCK / <%= title %>
+
+    <h1>
+        STUCK / <%= title %>
     </h1>
+
+</body>
+
 </body>
 
 </html>
