--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="/css/user_profile.css">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%=title %>
-    </title>
-</head>
-
-<body>
-    <h1>Users / <%=title %>
-    </h1>
-
-</body>
-
-</html>
+<!-- //partial concept -->
+<h1>
+    Users / Profile page
+</h1>
